--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,9 @@
     <title>problem will never last forever</title>
 </head>
 <body>
-    <h2>kono sommosa e sommosa na</h2>
+    <h2>kono sommosa e sommosa na jodi tumi bose na thako</h2>
+
+    <img width="400px" src="Images/RIYAN_20230703_165825_⛅Sky Edit by Riyan.jpg" alt="">
+    <img width="200px" src="Images/RIYAN_20230704_100540_🌈Extra Color by Riyan.jpg" alt="">
 </body>
 </html>
